--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/Reports.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/Reports.xaml
@@ -18,7 +18,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="10*"/>
             <RowDefinition Height="75*"/>
-            <RowDefinition Height="15*"/>
+            <RowDefinition Height="10*"/>
         </Grid.RowDefinitions>
 
         <!-- Page Title  -->
@@ -37,77 +37,20 @@
                     <MenuItem Header="Select Report Type" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
                         <MenuItem Header="Class Report" Name="MenuItemClass" Click="MenuItemClass_Click"/>
                         <MenuItem Header="Whole School" Name="MenuItemSchool" Click="MenuItemSchool_Click"/>
-                        <MenuItem Header="Absence Warnings" Name="MenuItemWarnings" Click="MenuItemWarnings_Click"/>
-                        <MenuItem Header="Absence Breaches" Name="MenuItemBreaches" Click="MenuItemBreaches_Click"/>
+                        <MenuItem Header="Absence Breaches and Warnings" Name="MenuItemBreaches" Click="MenuItemBreaches_Click"/>
                     </MenuItem>
                 </Menu>
             </Grid>
         </StackPanel>
-
-        <!-- Stack Panel containing the list of Pupils who have exceeded 10 absences but haven't reached 20 days yet -->
-        <StackPanel Name="Stk_AbsenceWarnings" Visibility="Hidden" Grid.Column="1" Grid.Row="1"  >
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="50*"/>
-                    <RowDefinition Height="50*"/>
-                </Grid.RowDefinitions>
-                <Label Content="Absence Warnings" FontSize="14" Grid.Row="0" HorizontalAlignment="Center" Visibility="Visible"/>
-                <Label Name="LblClassListError" 
-                       Content="Unable to Create the Absence Warning List" 
-                       FontSize="14" 
-                       Grid.Row="0" 
-                       HorizontalAlignment="Left" 
-                       FontWeight="Bold"
-                       Foreground="Red"
-                       Visibility="Hidden"/>
-                <ScrollViewer Grid.Row="1" Margin="10,10" VerticalAlignment="Top" Width="800" ScrollViewer.VerticalScrollBarVisibility="Visible" HorizontalAlignment="Stretch">
-                    <ListView Name="LstVAbsenceWarnings"  >
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Pupil Name" Width="400">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26" Text="{Binding FullName}"/>
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </GridViewColumn>
-                                <GridViewColumn Header="Class" Width="250">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26" Text="{Binding ClassName}"/>
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </GridViewColumn>
-                                <GridViewColumn Header="Total Days Absence" Width="130">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26" Text="{Binding AbsenceCount}"/>
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </GridViewColumn>
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
-                </ScrollViewer>
-             </Grid>
-        </StackPanel>
-
         <!-- Stack Panel containing the list of Pupils who have breached permitted absences -->
         <StackPanel Name="Stk_AbsenceBreaches" Visibility="Hidden" Grid.Column="1" Grid.Row="1"  >
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="50*"/>
-                    <RowDefinition Height="50*"/>
+                    <RowDefinition Height="10*"/>
+                    <RowDefinition Height="70*"/>
+                    <RowDefinition Height="20*"/>
                 </Grid.RowDefinitions>
                 <Label Content="Absence Breaches" FontSize="14" Grid.Row="0" HorizontalAlignment="Center" Visibility="Visible"/>
-                <Label Name="LblBreachesError" 
-                       Content="Unable to Create the Absence Breaches List" 
-                       FontSize="14" 
-                       Grid.Row="0" 
-                       HorizontalAlignment="Left" 
-                       FontWeight="Bold"
-                       Foreground="Red"
-                       Visibility="Hidden"/>
                 <ScrollViewer Grid.Row="1" Margin="10,10" VerticalAlignment="Top" Width="800" ScrollViewer.VerticalScrollBarVisibility="Visible" HorizontalAlignment="Stretch">
                     <ListView Name="LstVAbsenceBreaches"  >
                         <ListView.View>
@@ -122,14 +65,14 @@
                                 <GridViewColumn Header="Class" Width="250">
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
-                                            <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26" Text="{Binding ClassName}"/>
+                                            <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26" Text="{Binding Class.ClassName}"/>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
                                 <GridViewColumn Header="Total Days Absence" Width="130">
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
-                                            <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26" Text="{Binding AbsenceCount}"/>
+                                            <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26" Text="{Binding PupilAbsences.Count}"/>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
@@ -137,6 +80,24 @@
                         </ListView.View>
                     </ListView>
                 </ScrollViewer>
+                <Button Name="BtnAbsenceReturnToMain" HorizontalAlignment="Right" Grid.Row="1" Content="Main Reports" Width="150" Height="26" Click="BtnResetForm_Click" />
+            </Grid>
+        </StackPanel>
+
+        <!-- Stack Panel containing the Class selection dropdown list  -->
+        <StackPanel Name="Stk_SchoolReportSelector" Visibility="Hidden" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="10*"/>
+                    <RowDefinition Height="40*"/>
+                </Grid.RowDefinitions>
+                <Label Content="Select Report Option" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Visible"/>
+                <Menu Name="MenuSchoolReportType" AllowDrop="True" Width="200" Grid.Row="1" HorizontalAlignment="Left" Visibility="Visible">
+                    <MenuItem Header="Select School Report Type" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
+                        <MenuItem Header="Full School by Date" Name="MenuFullSchooDate" Click="MenuFullSchooDate_Click" />
+                        <MenuItem Header="Class by Date" Name="MenuClassDate" Click="MenuClassDate_Click" />                        
+                    </MenuItem>
+                </Menu>
             </Grid>
         </StackPanel>
 
@@ -144,10 +105,13 @@
         <StackPanel Name="Stk_ClassReportMenu" Visibility="Hidden" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" >
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="50*"/>
-                    <RowDefinition Height="50*"/>
+                    <RowDefinition Height="10*"/>
+                    <RowDefinition Height="40*"/>
+                    <RowDefinition Height="10*"/>
+                    <RowDefinition Height="20*"/>
+                    <RowDefinition Height="20*"/>
                 </Grid.RowDefinitions>                
-                <Label Content="Select Class From the List" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Visible"/>
+                <Label Name="LblCmbLabel" Content="Select Class From the List" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Visible"/>
                 <ComboBox AllowDrop="True"
                           Width="200"                                      
                           Grid.Row="1"
@@ -160,7 +124,16 @@
                           DisplayMemberPath="ClassName"
                           SelectedValuePath="ClassId"
                           SelectionChanged="CmbBxClassSelector_SelectionChanged"/>
-
+                <Label Name="Lbl_Date" Grid.Row="2" Content="Select Date" FontSize="14" Margin="10,10" HorizontalAlignment="Left" Visibility="Hidden"/>
+                <DatePicker AllowDrop="True" Name="Dp_DateSelector" Grid.Row="3" Margin="10,10" Width="200" Visibility="Hidden"/>
+                <Button Name="BtnReportGen"
+                        Content="Generate Report"
+                        Width="150" Height="26"
+                        Visibility="Hidden"
+                        Grid.Row="4"
+                        Click="BtnReportGen_Click"
+                        Margin="10,10"
+                        HorizontalAlignment="Left"/>
             </Grid>
         </StackPanel>
 
@@ -214,94 +187,25 @@
                     <RowDefinition Height="50*"/>
                 </Grid.RowDefinitions>
                 <ScrollViewer HorizontalAlignment="Right" VerticalAlignment="Top" MinWidth="700" MinHeight="500" MaxHeight="500" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="10,10">
-                    <TextBlock Name="Tblk_ReportBlock"  Background="AliceBlue" Foreground="Black"/>
+                    <TextBlock Name="Tblk_ReportBlock"  Background="AliceBlue" Foreground="Black" Padding="10,10" FontSize="14"/>
                 </ScrollViewer>
                 <Button Name="BtnResetForm" HorizontalAlignment="Right" Grid.Row="1" Content="Main Reports" Width="150" Height="26" Click="BtnResetForm_Click" />
                 <Button Name="BtnReturn" HorizontalAlignment="Left"  Grid.Row="1" Content="Class Report" Width="150" Height="26" Click="BtnReturn_Click" />
             </Grid>
         </StackPanel>
-
+        
         <!-- Stack Panel containing the Class absence report -->
-        <StackPanel Name="Stk_PupilReport" Visibility="Hidden" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" >
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="50*"/>
-                    <RowDefinition Height="50*"/>
-                </Grid.RowDefinitions>
-                <Label Content="Absence Report for Class" FontSize="14" Grid.Row="0" HorizontalAlignment="Center" Visibility="Visible"/>
-                <ListView Name="LstPupilReport" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" Width="800" ScrollViewer.VerticalScrollBarVisibility="Visible" Margin="10,10">
-                    <ListView.View>
-                        <GridView>
-                            <GridViewColumn Header="Pupil Name" Width="400">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26"/>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                            <GridViewColumn Header="Class" Width="250">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26"/>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                            <GridViewColumn Header="Total Days Absence" Width="130">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26"/>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                        </GridView>
-                    </ListView.View>
-                </ListView>
-            </Grid>
-        </StackPanel>
-
-        <!-- Stack Panel containing the Class absence report -->
-        <StackPanel Name="Stk_SchoolReport" Visibility="Hidden" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" >
+        <StackPanel Name="Stk_SchoolReport" Visibility="Hidden" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" >
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="50*"/>
                     <RowDefinition Height="50*"/>
                 </Grid.RowDefinitions>
                 <Label Content="Full School Absence Report" FontSize="14" Grid.Row="0" HorizontalAlignment="Center" Visibility="Visible"/>
-                <Label Name="LblSchoolReportError" 
-                       Content="Error Creating the Full School Report" 
-                       FontSize="14" 
-                       Grid.Row="0" 
-                       HorizontalAlignment="Left" 
-                       FontWeight="Bold"
-                       Foreground="Red"
-                       Visibility="Hidden"/>
-                <ListView Name="LstSchoolReport" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" Width="800" ScrollViewer.VerticalScrollBarVisibility="Visible" Margin="10,10">
-                    <ListView.View>
-                        <GridView>
-                            <GridViewColumn Header="Pupil Name" Width="400">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26"/>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                            <GridViewColumn Header="Class" Width="250">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26"/>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                            <GridViewColumn Header="Total Days Absence" Width="130">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Grid.Row="1"  HorizontalAlignment="Center" TextWrapping="Wrap" Height="26"/>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                        </GridView>
-                    </ListView.View>
-                </ListView>
+                <ScrollViewer HorizontalAlignment="Right" VerticalAlignment="Top" MinWidth="700" MinHeight="500" MaxHeight="500" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="10,10">
+                    <TextBlock Name="Tblk_SchoolReportBlock" FontSize="14"  Background="AliceBlue" Foreground="Black"/>
+                </ScrollViewer>
+                <Button Name="BtnReturnToMain" HorizontalAlignment="Right" Grid.Row="1" Content="Main Reports" Width="150" Height="26" Click="BtnResetForm_Click" />
             </Grid>
         </StackPanel>
     </Grid>
